[package]
name = "swap-website"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.2", features = ["web"] }
dioxus-logger = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
solana-sdk = "2.2.0"
base64 = "0.22.1"
bs58 = "0.5.1"
rmp-serde = "1.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
]

[dependencies.futures]
version = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
